logs/openerp-web-calendar.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/mock'...
Listing './lib/python3.5/site-packages/mock/tests'...
Listing './lib/python3.5/site-packages/mock-2.0.0.dist-info'...
Listing './lib/python3.5/site-packages/openerp'...
Listing './lib/python3.5/site-packages/openerp/addons'...
Listing './lib/python3.5/site-packages/openerp/addons/web'...
Listing './lib/python3.5/site-packages/openerp/addons/web/cli'...
Listing './lib/python3.5/site-packages/openerp/addons/web/controllers'...
Compiling './lib/python3.5/site-packages/openerp/addons/web/controllers/main.py'...
***   File "./lib/python3.5/site-packages/openerp/addons/web/controllers/main.py", line 219
    except Exception,e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/openerp/addons/web/doc'...
Listing './lib/python3.5/site-packages/openerp/addons/web/doc/_static'...
Listing './lib/python3.5/site-packages/openerp/addons/web/doc/_templates'...
Listing './lib/python3.5/site-packages/openerp/addons/web/doc/_themes'...
Listing './lib/python3.5/site-packages/openerp/addons/web/doc/_themes/flask'...
Listing './lib/python3.5/site-packages/openerp/addons/web/doc/_themes/flask_small'...
Listing './lib/python3.5/site-packages/openerp/addons/web/doc/images'...
Listing './lib/python3.5/site-packages/openerp/addons/web/doc/module'...
Listing './lib/python3.5/site-packages/openerp/addons/web/doc/module/static'...
Listing './lib/python3.5/site-packages/openerp/addons/web/doc/module/static/src'...
Compiling './lib/python3.5/site-packages/openerp/addons/web/http.py'...
***   File "./lib/python3.5/site-packages/openerp/addons/web/http.py", line 214
    except xmlrpclib.Fault, e:
                          ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/openerp/addons/web/i18n'...
Compiling './lib/python3.5/site-packages/openerp/addons/web/session.py'...
***   File "./lib/python3.5/site-packages/openerp/addons/web/session.py", line 90
    except openerp.osv.osv.except_osv, e:
                                     ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/openerp/addons/web/static'...
Listing './lib/python3.5/site-packages/openerp/addons/web/static/lib'...
Listing './lib/python3.5/site-packages/openerp/addons/web/static/lib/backbone'...
Listing './lib/python3.5/site-packages/openerp/addons/web/static/lib/cleditor'...
Listing './lib/python3.5/site-packages/openerp/addons/web/static/lib/cleditor/images'...
Listing './lib/python3.5/site-packages/openerp/addons/web/static/lib/datejs'...
Listing './lib/python3.5/site-packages/openerp/addons/web/static/lib/datejs/globalization'...
Listing './lib/python3.5/site-packages/openerp/addons/web/static/lib/jquery'...
Listing './lib/python3.5/site-packages/openerp/addons/web/static/lib/jquery.MD5'...
Listing './lib/python3.5/site-packages/openerp/addons/web/static/lib/jquery.MD5/tests'...
Listing './lib/python3.5/site-packages/openerp/addons/web/static/lib/jquery.autosize'...
Listing './lib/python3.5/site-packages/openerp/addons/web/static/lib/jquery.ba-bbq'...
Listing './lib/python3.5/site-packages/openerp/addons/web/static/lib/jquery.blockUI'...
Listing './lib/python3.5/site-packages/openerp/addons/web/static/lib/jquery.form'...
Listing './lib/python3.5/site-packages/openerp/addons/web/static/lib/jquery.placeholder'...
Listing './lib/python3.5/site-packages/openerp/addons/web/static/lib/jquery.scrollTo'...
Listing './lib/python3.5/site-packages/openerp/addons/web/static/lib/jquery.textext'...
Listing './lib/python3.5/site-packages/openerp/addons/web/static/lib/jquery.timeago'...
Listing './lib/python3.5/site-packages/openerp/addons/web/static/lib/jquery.tipsy'...
Listing './lib/python3.5/site-packages/openerp/addons/web/static/lib/jquery.ui'...
Listing './lib/python3.5/site-packages/openerp/addons/web/static/lib/jquery.ui/css'...
Listing './lib/python3.5/site-packages/openerp/addons/web/static/lib/jquery.ui/js'...
Listing './lib/python3.5/site-packages/openerp/addons/web/static/lib/jquery.ui.bootstrap'...
Listing './lib/python3.5/site-packages/openerp/addons/web/static/lib/jquery.ui.bootstrap/bootstrap'...
Listing './lib/python3.5/site-packages/openerp/addons/web/static/lib/jquery.ui.bootstrap/css'...
Listing './lib/python3.5/site-packages/openerp/addons/web/static/lib/jquery.ui.bootstrap/third-party'...
Listing './lib/python3.5/site-packages/openerp/addons/web/static/lib/jquery.ui.notify'...
Listing './lib/python3.5/site-packages/openerp/addons/web/static/lib/jquery.ui.notify/js'...
Listing './lib/python3.5/site-packages/openerp/addons/web/static/lib/jquery.ui.timepicker'...
Listing './lib/python3.5/site-packages/openerp/addons/web/static/lib/jquery.ui.timepicker/js'...
Listing './lib/python3.5/site-packages/openerp/addons/web/static/lib/jquery.validate'...
Listing './lib/python3.5/site-packages/openerp/addons/web/static/lib/py.js'...
Listing './lib/python3.5/site-packages/openerp/addons/web/static/lib/py.js/lib'...
Listing './lib/python3.5/site-packages/openerp/addons/web/static/lib/qunit'...
Listing './lib/python3.5/site-packages/openerp/addons/web/static/lib/qweb'...
Listing './lib/python3.5/site-packages/openerp/addons/web/static/lib/spinjs'...
Listing './lib/python3.5/site-packages/openerp/addons/web/static/lib/underscore'...
Listing './lib/python3.5/site-packages/openerp/addons/web/static/src'...
Listing './lib/python3.5/site-packages/openerp/addons/web/static/src/font'...
Listing './lib/python3.5/site-packages/openerp/addons/web/static/src/img'...
Listing './lib/python3.5/site-packages/openerp/addons/web/static/src/img/icons'...
Listing './lib/python3.5/site-packages/openerp/addons/web/static/src/img/ui'...
Listing './lib/python3.5/site-packages/openerp/addons/web/static/src/js'...
Listing './lib/python3.5/site-packages/openerp/addons/web/static/src/xml'...
Listing './lib/python3.5/site-packages/openerp/addons/web/static/test'...
Listing './lib/python3.5/site-packages/openerp/addons/web/static/test/fulltest'...
Listing './lib/python3.5/site-packages/openerp/addons/web/tests'...
Listing './lib/python3.5/site-packages/openerp/addons/web/tests/qunitsuite'...
Listing './lib/python3.5/site-packages/openerp/addons/web/tests/qunitsuite/grunt'...
Listing './lib/python3.5/site-packages/openerp_web-7.0.406.egg-info'...
Listing './lib/python3.5/site-packages/pbr'...
Listing './lib/python3.5/site-packages/pbr/cmd'...
Listing './lib/python3.5/site-packages/pbr/hooks'...
Listing './lib/python3.5/site-packages/pbr/tests'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage/data_files'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage/doc'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage/doc/source'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage/pbr_testpackage'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage/pbr_testpackage/package_data'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage/src'...
Listing './lib/python3.5/site-packages/pbr-3.1.1.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
